--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net48" />
+  <package id="MaterialDesignColors" version="1.2.7" targetFramework="net48" />
+  <package id="MaterialDesignThemes" version="3.2.0" targetFramework="net48" />
   <package id="OxyPlot.Core" version="2.0.0" targetFramework="net48" />
   <package id="OxyPlot.Wpf" version="2.0.0" targetFramework="net48" />
 </packages>
